--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -1,8 +1,6 @@
 name: Create and publish a Docker image
 
-on:
-  push:
-    branches: ['release']
+on: push
 
 env:
   REGISTRY: ghcr.io
@@ -32,7 +30,6 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=semver,pattern={{version}}
             type=ref,event=branch
             type=sha
 
